# citation-checker

./: .gitignore  README.md  pyproject.toml
citecheck/: __init__.py  __main__.py  cli.py  http.py  matching.py  models.py  parsers.py  report.py  scholar.py  sources.py  verify.py
examples/: sample.bib
skills/citation-checking/: SKILL.md
skills/citation-checking/references/: scholar-fallback.md  verdicts.md
tests/: test_matching.py
